--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,11 @@
+
 @import 'tailwindcss';
+
+@import './assets/css/fonts.css';
 
 
 body {
     background-color: #FFF8F0;
     color: #3B3B3B;
+    overflow-x: hidden;
 }
