--- a/src/assets/css/basic.css
+++ b/src/assets/css/basic.css
@@ -1,37 +1,61 @@
-/* Style général pour tous les titres */
+
 h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
   margin-bottom: 0.5rem;
-  color: #333;
 }
 
-/* Style spécifique pour chaque niveau de titre */
 h1 {
-  font-size: 2.5rem;    /* Titre principal */
-  color: #D96E30;       /* Couleur */
+  font-size: 2.5rem;
 }
 
 h2 {
-  font-size: 2rem;      /* Sous-titre */
-  color: #3D7C4D;
+  font-size: 2rem;
 }
 
 h3 {
   font-size: 1.75rem;
-  color: #0A436B;
 }
 
 h4 {
   font-size: 1.5rem;
-  color: #222;
 }
 
 h5 {
   font-size: 1.25rem;
-  color: #666;
 }
 
 h6 {
   font-size: 1rem;
-  color: #888;
+}
+
+ul, ol {
+  padding-left: 1.5rem;
+  list-style-type: disc; /* ou 'decimal' pour ol */
+}
+
+ul {
+  list-style: disc;
+}
+
+ol {
+  list-style: decimal;
+}
+
+hr {
+  height: 2px;
+  background-color: #D96E30;
+  border: none;
+}
+
+blockquote {
+  border-left: 4px solid #D96E30;
+  padding-left: 1rem;
+  color: #555;
+  font-style: italic;
+  margin: 1rem 0;
+}
+
+a {
+    text-decoration: underline;
+    color: #555;
 }
