--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
 
 
 body {
-    background-color: #f5e4ff;
-    color: #4B5563;
+    background-color: #FFF8F0;
+    color: #3B3B3B;
     overflow-x: hidden;
 }
