--- a/src/style.css
+++ b/src/style.css
@@ -17,3 +17,17 @@ body {
   scrollbar-width: none;
   -ms-overflow-style: none;
 }
+
+
+.left-arrow {
+  width: 30px;
+  height: 30px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.left-arrow {
+  background-image: url('./assets/svgs/left_arrow.svg');
+  filter: brightness(0) saturate(100%) invert(55%) sepia(65%) saturate(538%) hue-rotate(343deg) brightness(98%) contrast(98%);
+}
