add db settings (download load & reset

--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@ body {
     color: var(--text);
     overflow-x: hidden;
     font-family: 'Roboto';
+    transition: background-color 0.3s;
 }
 
 h1, h2, h3, h4, h5, h6 {
