--- a/src/style.css
+++ b/src/style.css
@@ -2,13 +2,18 @@
 
 
 :root {
+  --bg: #FFF8F0;
+  --bg2: #fff5e8;
+  --text: #3B3B3B;
+  --btn: #F28C28;
+
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color-scheme: light;
+  color: var(--text);
+  background-color: var(--bg);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -16,13 +21,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1, h2 {
+  font-family: 'Playfair Display', sans-serif;
+}
+
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #F28C28;
   text-decoration: inherit;
+  cursor: pointer;
 }
 a:hover {
-  color: #535bf2;
+  color: #d5731c;
 }
 
 body {
@@ -31,26 +41,48 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: var(--bg);
+  color: var(--text);
+  font-family: 'roboto', sans-serif;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: var(--text);
 }
 
-button {
+button.primary {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.4em 1rem;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: var(--btn);
+  color: white;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: border-color 0.25s, background-color 0.25s;
 }
+
+button.second {
+  border-radius: 8px;
+  border: 2px solid var(--btn);
+  padding: 0.4em 1em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: var(--btn);
+  background-color: transparent;
+  color: var(--text);
+  cursor: pointer;
+  transition: border-color 0.25s, background-color 0.25s;
+}
+
 button:hover {
-  border-color: #646cff;
+  border-color: #d5731c;
+  background-color: #e67d13;
+  color: white;
 }
 button:focus,
 button:focus-visible {
@@ -59,6 +91,9 @@ button:focus-visible {
 
 .card {
   padding: 2em;
+  background-color: var(--bg2);
+  border-radius: 12px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
 }
 
 #app {
@@ -66,17 +101,6 @@ button:focus-visible {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background-color: var(--bg);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
