--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,10 @@
   -ms-overflow-style: none;
 }
 
+*::-webkit-scrollbar {
+  display: none;
+}
+
 body {
   background-color: var(--bg);
   color: var(--text);
