add markdown with /

--- a/src/assets/css/basic.css
+++ b/src/assets/css/basic.css
@@ -70,3 +70,8 @@
   white-space: pre-wrap;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
+
+.prose p {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
