--- a/src/style.css
+++ b/src/style.css
@@ -112,19 +112,48 @@ button:focus-visible {
 }
 
 
-    .fade-slide-enter-active,
-    .fade-slide-leave-active {
-        transition: opacity 0.3s ease, transform 0.3s ease;
-    }
+.fade-slide-enter-active,
+.fade-slide-leave-active {
+  transition: all 0.25s ease;
+}
 
-    .fade-slide-enter-from,
-    .fade-slide-leave-to {
-        opacity: 0;
-        transform: translateY(-10px);
-    }
+.fade-slide-enter-from {
+  opacity: 0;
+  transform: translateY(-10px) scale(0.98);
+}
 
-    .fade-slide-enter-to,
-    .fade-slide-leave-from {
-        opacity: 1;
-        transform: translateY(0);
-    }
+.fade-slide-leave-to {
+  opacity: 0;
+  transform: translateY(-10px) scale(0.98);
+}
+
+.dropdown {
+  border-radius: var(--br-btn, 10px);
+  box-shadow: 0 8px 15px rgba(54, 54, 54, 0.288);
+  backdrop-filter: blur(6px);
+  min-width: 200px;
+  padding: 0.5rem;
+}
+
+.dropdown ul {
+  gap: 0px;
+} 
+
+.dropdown ul li {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  padding: 0.5rem;
+  border-radius: 6px;
+  transition: background-color 0.2s ease, transform 0.2s ease;
+}
+
+.dropdown ul li:hover {
+  background-color: rgba(131, 131, 131, 0.15);
+}
+
+.dropdown.color ul li:hover {
+  background-color: rgba(255, 255, 255, 0.15);
+}
+
+
