--- a/src/components/Markdown/css/basic.css
+++ b/src/components/Markdown/css/basic.css
@@ -1,3 +1,17 @@
+.prose {
+  padding: 5px;
+}
+
+.prose .ytb-viewer {
+  width: 100%;
+}
+
+.prose img,
+.prose .ytb-viewer {
+  border-radius: 12px;
+  margin: 10px 5px 10px 5px;
+}
+
 
 .prose h1, .prose h2, .prose h3, .prose h4, .prose h5, .prose h6 {
   font-weight: bold;
