--- a/src/components/Markdown/css/basic.css
+++ b/src/components/Markdown/css/basic.css
@@ -1,5 +1,6 @@
 .prose {
   padding: 5px;
+  font-size: 1em;
 }
 
 .prose .ytb-viewer {
@@ -18,27 +19,15 @@
 }
 
 .prose h1 {
-  font-size: 2.5rem;
-}
-
-.prose h2 {
   font-size: 2rem;
 }
 
-.prose h3 {
-  font-size: 1.75rem;
-}
-
-.prose h4 {
+.prose h2 {
   font-size: 1.5rem;
 }
 
-.prose h5 {
+.prose h3 {
   font-size: 1.25rem;
-}
-
-.prose h6 {
-  font-size: 1rem;
 }
 
 .prose ul, .prose ol {
