--- a/src/components/Markdown/tiptap-extensions/dragHandle/drag-icon.css
+++ b/src/components/Markdown/tiptap-extensions/dragHandle/drag-icon.css
@@ -1,8 +1,8 @@
 .drag-icon {
-        
-    transform: translateY(5px);
+    
+    transform: translateY(6px);
     padding-right: 0.5em;
-    height: 100%;
+    height: 5em;
     display: inline-block; 
 
     &::after {
@@ -22,7 +22,6 @@
         cursor: grab;
         border-radius: 0.25rem;
         transition: all 0.2s;
-
 
     }
 
