--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
 @import './assets/css/theme.css';
 @import './assets/css/dropdown.css';
 @import './assets/css/button.css';
+@import './assets/css/ToolTip.css';
 
 
 p, span {
