--- a/src/assets/css/dropdown.css
+++ b/src/assets/css/dropdown.css
@@ -24,7 +24,8 @@
     opacity: 50%;
 }
 
-.dropdown ul li:hover {
+
+.dropdown ul li:not(.nohover):hover {
   background-color: rgba(131, 131, 131, 0.15);
 }
 
